fix Bolch before re-run

--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -386,12 +386,12 @@ In most of the paper, I focus on the definition of extreme poverty employed in t
 First, this poverty line %is too low to procure just a healthy diet, it is 
 is barely sufficient to satisfy one's caloric requirements and is too low to procure a healthy diet or non-food necessities. 
 Second, the PPP adjustments applied to PIP data before computing the poverty rates are based on prices of an average consumption basket rather than on prices of subsistence goods \citep{sullivan_capitalist_2023}. Therefore, the cost of a subsistence diet varies across countries. For instance, \cite{moatsos_global_2016} computes that it is \$1.44 in Malawi vs. \$4.10 in Kenya (in 2011 PPP \$). Buidling on earlier work by \cite{allen_absolute_2017} that addresses these issues, \cite{moatsos_global_2016} computes a country-specific poverty line. This basic consumption (or \textit{BCS}) poverty line corresponds to the local price of the cheapest diet that meets caloric and protein requirements, completed with a ration of fat, sugar, and basic non-food requirements (see also \citealp{moatsos_global_2021}). This alternative measure, equal to \$4.35/day in median, indicates that poverty % destitution? % On definitions of poverty, cite: Woodward & Abdallah (10) - no data but based on infant mortality rate, Pritchett (06) - 15$ based on HIC poverty lines, Edward (06) - 7$ based on kink in relation between GDP and life expectancy
-is more prevalent than the official poverty line suggests. Despite missing data in many countries (including India and the D.R.C.), 15 countries have an average consumption level below this basic consumption poverty line in 2030 in the 3\% growth scenario. These countries (which include e.g. Nigeria) do not have sufficient resources to lift their population above the BCS poverty line even after extreme domestic redistribution. 
+is more prevalent than the official poverty line suggests. Despite missing data in many countries (including India and the D.R.C.), 14 countries have an average consumption level below this basic consumption poverty line in 2030 in the 3\% growth scenario. These countries (which include e.g. Nigeria) do not have sufficient resources to lift their population above the BCS poverty line even after extreme domestic redistribution. 
 % - Even worse when considering Moatsos' BCS line
 
 BCL found that 62 countries could not eradicate severe poverty (defined as \$$_\text{2005}$2/day) with an antipoverty cap at \$$_\text{2005}$13/day, while 27 could not even do so with a cap at \$$_\text{2005}$2/day. 
 Their findings cannot be exactly reproduced with the revised PIP data, as the switch from 2005 to 2017 PPPs has altered not only the level but also the distribution of incomes (for the same reason, the results of BCL and Ravallion cannot be compared). 
-When I replicate the computations of BCL (with their survey years but after scaling the original thresholds into 2017 PPPs by a factor $2.15/1.25 = 1.72$), I find that 52 (resp. 30) 
+When I replicate the computations of BCL (with their survey years but after scaling the original thresholds into 2017 PPPs by a factor $2.15/1.25 = 1.72$), I find that 53 (resp. 30) 
 countries could not eradicate severe poverty with a cap at \$22.36/day (resp. \$3.44/day). 
 In other words, the revision of PIP data resulted in an apparent enrichment. 
 Looking ahead, in our baseline scenario with 3\% growth, we find that in 2030, 34 (resp. 6) 
@@ -409,7 +409,7 @@ countries will not be able to eradicate severe poverty with a cap at \$22.36/day
 Figure \ref{fig:antipoverty_tax_7} presents the tax rate above \$6.85/day required to generate enough revenues to close the domestic extreme poverty gap, in the baseline scenario of 3\% growth. Note that this hypothetical tax would apply on top of existing taxes. The threshold of \$6.85/day is defined by the World Bank as the median national poverty line of upper middle-income countries. It corresponds to an ``acute'' poverty line which can be understood as the consumption level that can sustain a minimally decent life \citep{hickel_is_2019,kikstra_decent_2021}. In contrast, the extreme poverty line of \$2.15/day corresponds to the consumption per capita below which one is undernourished \citep{allen_absolute_2017}. 
 
 Consistently with the previous findings, taxing income at a 100\% rate above \$6.85/day would not generate enough revenues to eliminate extreme poverty in the five poorest countries. In Nigeria, closing the extreme poverty gap would require taxing the ``non-acutely-poor'' at a marginal rate of 20\%. 
-On average over Sub-Saharan Africa, the anti-\textit{extreme-poverty} tax would be 49\%, and 70\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Yet, imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
+On average over Sub-Saharan Africa, the anti-\textit{extreme-poverty} tax would be 46\%, and 70\% in low-income countries (defined by the World Bank as countries with a GNI per capita below \$1,135 per year). Yet, imposing such a large tax burden on any income above just \$6.85/day seems unrealistic. 
 
 \begin{figure}[b!]
   \caption[Anti-\textit{extreme-poverty} tax above \$18.15/day in 2030 after 3\% growth.]{Linear tax rate above \$18.15/day eradicating extreme poverty (in \%). In this idealized policy, all tax revenue is transferred to the extreme poor and lift them at \$2.15/day, assuming away distorsions, and after a yearly growth of 7\% over 2022--2030.
@@ -464,7 +464,7 @@ If applied to the global level, the tax of the previous section would bring the 
 
 To close the \textit{extreme} poverty gap, a 1.2\% marginal tax % TODO? rate?
 above 100\$/day (i.e. \$36,500/year) would suffice. %raise revenues equal to the 2030 . 
-Such a tax would result in 0.15\% of global income being transferred from the rich to the extreme poor, most of it (0.14\% of global income) being transferred from one country to another. 
+Such a tax would result in 0.15\% of global income being transferred from the rich to the extreme poor, almost exclusively transferred from rich countries to poor countries. 
 With contributions of up to 0.4\% of a country's income (in the U.S.), aggregate consumption would increase by more than 10\% in 9 countries. 
 %Low-income countries would receive 3\% of their consumption (and up to 11\% in the D.R.C. or 36\% in Madagascar) 
 % while the U.S. would contribute 0.4\% of its consumption.
