--- a/tables/bolch_replication.tex
+++ b/tables/bolch_replication.tex
@@ -51,7 +51,8 @@ Vietnam & 2008 & 0.36 & 0.43 & 1.00 & 0.87 & 1.00 & 0.06\\
 Yemen & 2005 & 0.37 & 0.47 & 0.83 & 0.85 & 0.11 & 0.13\\
 South Africa & 2008 & 0.37 & 0.31 & 0.97 & 0.98 & 0.94 & 0.97\\
 Zambia & 2010 & 0.81 & 0.87 & 0.35 & 0.13 & 0.06 & 0.01\\
-China & 2008 & 0.08 & 0.27 & 1.00 & 0.97 & 1.00 & 0.78\\
-India & 2009 & 0.20 & 0.69 & 0.94 & 0.48 & 0.54 & 0.04\\
+China & 2008 & 0.18 & 0.27 & 1.00 & 0.97 & 1.00 & 0.78\\
+Indonesia & 2011 & 0.26 & 0.44 & 0.99 & 0.89 & 0.92 & 0.08\\
+India & 2009 & 0.26 & 0.69 & 0.94 & 0.48 & 0.54 & 0.04\\
 \bottomrule
 \end{longtable}
