--- a/deprecated/JDS_response.tex
+++ b/deprecated/JDS_response.tex
@@ -191,7 +191,13 @@ response
 \textit{In the global redistribution scenario, how are political feasibility and implementation challenges addressed? These considerations are critical for translating the findings into actionable insights. }~\\
 
 I recognize that global redistribution \textit{might be} politically or technically infeasible. This observation should not compromise the modest goal of the paper, which is to demonstrate that SDG1 cannot be achieved without global redistribution. If, in addition, global redistribution turns out to be infeasible, it would mean that SDG1 cannot be achieved. In the present paper, I remain agnostic regarding the feasibility of global redistribution and simply note that this \textit{might be} a path towards SDG1. Knowing that global solidarity is the only way to achieve SDG1, it may be worth studying the feasibility of this path rather than neglecting its possibility entirely. 
-While addressing the feasibility of global redistribution remains outside the scope of this paper, I added the following sentences acknowledging the challenges it represents. % TODO complete and reproduce for R2's last point
+While addressing the feasibility of global redistribution remains outside the scope of this paper, I added the following paragraph analyzing the challenges it represents: 
+``\textit{While global solidarity has the potential to eradicate poverty, it may also prove politically and technically feasible. 
+%While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. 
+%Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. 
+Regarding political acceptability, (Fabre et al., 2023) show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. %Along political feasibility, implementation challenges might be another hurdle for global redistribution. On the one hand, 
+As for implementation, government programs offer a proven path to poverty reduction through the deployment of public services, social protection, and infrastructures. 
+Yet, our idealized policies entail direct cash transfers to the poorest households. Such transfers may offer a reliable way to alleviate poverty (Haushofer et al., 2016; Egger et al., 2022), but could be challenging to implement. In this regard, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries (World Bank 2017, 2020, 2022), with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification makes it possible to offer numerous services, including cash transfers. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits (Muralidharan, 2023). In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic (Ipa, 2021). Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas.}''
 ~\\ ~\\
 
 \textit{Related to taxation scenarios, I wonder if the antipoverty cap would not generate new poor individuals. If the whole income share up to a certain threshold is completely redistributed to the bottom, all individuals with incomes above that level would automatically have zero income and become poor. }~\\
@@ -234,7 +240,10 @@ To highlight the paper's contributions, I added the following paragraph at the e
 \textit{2.	Absence of a theoretical framework}
 \textit{This paper employs a methodology like Bolch et al. (2022) to assess which countries have sufficient domestic resources to achieve the first SDG. It is important to briefly discuss this framework in the paper in a separate methodology section as I had to go back to Bolch et al. (2022) to refresh my knowledge about this methodology. }~\\
 
-response TODO add income floor
+% TODO 
+To make the methodological section more visible, I renamed it ``Methodology: idealized redistributive policies''. I have completed it by the description of the income floor as follows: ``\textit{I also introduce another policy: (iii) the ``income floor'' that could be funded by a given, realistic tax schedule. The poverty gap can be closed by this tax schedule when the income floor exceeds the poverty threshold.}'' 
+
+I believe that all methodological information given in Bolch et al. (2022) is now explicited in the paper.
 ~\\ ~\\
 
 \textit{3.	Narrow scope of the methodology}
@@ -260,7 +269,14 @@ The second one concludes the Introduction and reads: ``\textit{The main contribu
 
 To acknowledge the institutional barriers to a replication of the Chinese miracle, I added the words in bold in the following sentence: ``The D.R.C. is poorer today than China was in 1990, 
 so even if it replicates the Chinese miracle, \textbf{which is not easy given its institutional capacity,} it will not be able to eradicate extreme poverty on its own before 2055.''
-% TODO
+
+While addressing the feasibility of global redistribution remains outside the scope of this paper, I added the following paragraph analyzing the challenges it represents at the end of Section 3.6: 
+``\textit{While global solidarity has the potential to eradicate poverty, it may also prove politically and technically feasible. 
+%While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. 
+%Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. 
+Regarding political acceptability, (Fabre et al., 2023) show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. %Along political feasibility, implementation challenges might be another hurdle for global redistribution. On the one hand, 
+As for implementation, government programs offer a proven path to poverty reduction through the deployment of public services, social protection, and infrastructures. 
+Yet, our idealized policies entail direct cash transfers to the poorest households. Such transfers may offer a reliable way to alleviate poverty (Haushofer et al., 2016; Egger et al., 2022), but could be challenging to implement. In this regard, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries (World Bank 2017, 2020, 2022), with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification makes it possible to offer numerous services, including cash transfers. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits (Muralidharan, 2023). In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic (Ipa, 2021). Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas.}''
 ~\\ ~\\
 
 \clearpage 
