--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -308,7 +308,7 @@ In low-income countries (those of greatest interest to us), PIP provides data on
 Another potential concern with household surveys is that the aggregate (national) consumption they imply is generally lower than the one estimated in national accounts \citep{deaton_measuring_2005,prydz_disparities_2022,hlasny_impact_2022}. This discrepancy comes from measurement errors on both sides: on the one hand, household surveys suffer from underreporting of top incomes and large expenditures; on the other hand, national accounts do not properly account for informal work %and auto-consumption, % TODO? cite? Deaton (2001) argues that in India approximately half of the gap between national accounts consumption and household surveys is due to imputed rents
 and tend to inflate agricultural output \citep{angrist_why_2021}. 
 Furthermore, authoritarian countries have been shown to produce inflated GDP statistics, except for countries below the GDP threshold of eligibility for preferential loans by the World Bank \citep{martinez_how_2022}. % international development association
-While Household Final Consumption Expenditures (HFCE) from national accounts is 42\% greater than the aggregate consumption from household surveys, the ``discrepancy ratio'' is largest for middle-income countries and is only 12\% for low-income countries. 
+While Household Final Consumption Expenditures (HFCE) from national accounts is 42\% greater than the aggregate consumption from household surveys, the ``discrepancy ratio'' is largest for middle-income countries and is only 11\% for low-income countries. 
 Because household surveys are best suited to estimate consumption by the poorest, I use unadjusted PIP data as a baseline. 
 
 As a robustness check, I also re-derive the main results after adjusting aggregate consumption by the discrepancy ratio (computed using World Bank data). In line with \cite{lakner_global_2013} and \cite{anand_chapter_2015}, I impute the extra consumption to the top percentile. I do not perform the rescaling on the 15\% of countries (like Burundi or the D.R.C.) with HFCE lower than its aggregate consumption from PIP, and I assume a discrepancy ratio of +12\% for the 20\% of countries lacking data on HFCE. 
@@ -334,14 +334,15 @@ I estimate that 6\% of the world population will live in extreme poverty in 2030
 % With a balanced growth at a rate of 3\% in each country, extreme poverty would decline slightly more than in the realistic projections, at 5\%.
 If each country grows by 3\% each year, extreme poverty would decline slightly more than in the realistic projections, at 5\%. 
 Although steady growth reduces poverty, growth alone cannot achieve the first SDG: If the world grows by 7\% each year (the maximum rate observed for a given country over 2010--2019), % CN 6.7%
-the extreme poverty rate would still be 3\% in 2030. Even if the world had experienced a 7\% growth rate starting in 2015 (when the SDGs were adopted), extreme poverty would not have been completely eliminated, at 1\% of the world population in 2030. 
+the extreme poverty rate would still be 2\% in 2030. Even if the world had experienced a 7\% growth rate starting in 2015 (when the SDGs were adopted), extreme poverty would not have been completely eliminated, at 1\% of the world population in 2030. 
 As we cannot rely on growth alone to eliminate poverty, let us add domestic redistribution to the equation. 
 
-\subsection{Idealized redistributive policies}
+\subsection{Methodology: idealized redistributive policies}
 
 Studying the arithmetics of inequality at the country level, I use the poverty gap to approximate the revenues required to eliminate poverty. 
-More specifically, I consider taxes on top incomes to finance a transfer to the poorest that would lift them at the poverty line. I consider two types of redistributive policies to close the poverty gap: (i) an ``antipoverty cap'' that would establish a ceiling on top incomes (and tax income at a 100\% rate above that threshold); (ii) an ``antipoverty tax'' that would raise a linear tax above a certain threshold. 
+More specifically, I consider taxes on top incomes to finance a transfer to the poorest that would lift them at the poverty line. I consider two types of redistributive policies to close the poverty gap: (i) an ``antipoverty cap'' that would establish a ceiling on top incomes (and tax income at a 100\% rate above that threshold); (ii) an ``antipoverty tax'' that would raise a linear tax above a certain threshold. I also introduce another policy: (iii) the ``income floor'' that could be funded by a given, realistic tax schedule. The poverty gap can be closed by this tax schedule when the income floor exceeds the poverty threshold.
 
+% TODO here health, educ...
 These policies are idealized. The estimate of revenue they generate should be seen as an upper bound of what could be achieved if they were implemented in practice. 
 First, I ignore any costs associated with raising a tax or transferring money, as if the lowest-income countries already had sufficient administrative resources. Second, any tax (and a fortiori a 100\% tax) reduces economic activity (real or declared). In this exercise, I abstract from tax distorsions and assume that the policies would not affect the taxable base.% shorten (take out this or the following paragraph)
 
@@ -356,7 +357,7 @@ Therefore, both the antipoverty cap and the antipoverty tax can be thought as ro
 
 In low-income countries, we measure household consumption rather than income, meaning that we do not capture investment nor government spending. In other words, our idealized policies would leave productive investment and public services unaffected, an appropriate treatment given that these channels already contribute to growth and poverty reduction.% shorten
 
-Unless otherwise stated, I use the scenario of balanced growth at a rate of 3\%. I choose this rate as a baseline as it is an upper bound of growth rates recently experienced in the lowest-income countries. Indeed, among the 8 countries with an average consumption below 3\$/day, growth was on average negative over 2014--2019 (or 2014--2022), and the highest growing country (Central African Republic) grew at a rate of 2.4\% per year. % shorten as it seems I specify everywhere
+Unless otherwise stated, I use the scenario of balanced growth at a rate of 3\%. I choose this rate as a baseline as it is an upper bound of growth rates recently experienced in the lowest-income countries. Indeed, among the 8 countries with an average consumption below 3\$/day, growth was on average negative over 2014--2019 (or 2014--2022), and the highest growing country (Central African Republic) grew at a rate of 2.4\% per year. % shorten as it seems I specify everywhere TODO: check
 
 \subsection{Antipoverty caps\label{subsec:cap}}
 
@@ -489,7 +490,12 @@ These rates are expressed on top of the current tax system and apply to post-tax
 % Although the idea of an internationally redistributive tax may seem far-fetched, 
 Although internationally redistributive taxes have yet to take off, the proposal of a global wealth tax is gaining momentum \citep{piketty_brief_2022}. A 2\% tax on individual net wealth above \$1 billion would raise \$214 billion a year, slightly more than the global extreme poverty gap \citep{alstadsaeter_global_2024}. Moreover, a global tax on the wealthiest 1\% can raise enough revenues to close the global acute poverty gap and lift everyone above \$6.85/day. For example, the \href{https://wid.world/world-wealth-tax-simulator}{WID wealth tax simulator} shows that a tax consisting of a 4\% marginal rate above \$1 million and 10\% above \$100 million would raise 4.4\% of the global GDP. More generally, a global tax on millionaires designed to be revenue-maximing in the long-run has the potential to finance the eradication of acute poverty. 
 
-While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. Indeed, \cite{fabre_international_2023} show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. Meanwhile, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries \citep{world_bank_state_2017,world_bank_benin_2020,world_bank_identification_2022}, with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification then makes it possible to offer numerous services. In particular, it could be used for cash transfers to the poorest households, a promising method to alleviate poverty \citep{haushofer_short-term_2016,egger_general_2022}. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits \citep{muralidharan_identity_2023}. In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic \citep{ipa_togos_2021}. Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas. While direct cash transfers are increasingly viewed as a reliable way to eradicate poverty, conventional government programs may offer a more proven path through the deployment public services, social protection, and deployment infrastructures. The latter would not even need to rely on future progress regarding identification and mobile networks. % TODO
+While global solidarity has the potential to eradicate poverty, it might also prove politically and technically feasible. 
+%While global solidarity has the potential to eradicate poverty, it might prove politically or technically infeasible. 
+%Nevertheless, attitudinal surveys and recent technological progress call for a thorough examination of this possibility. 
+Regarding political acceptability, \cite{fabre_international_2023} show overwhelming support for a global tax on millionaires that would finance low-income countries, reaching 69\% in the U.S. and 84\% in Europe. %Along political feasibility, implementation challenges might be another hurdle for global redistribution. On the one hand, 
+As for implementation, government programs offer a proven path to poverty reduction through the deployment of public services, social protection, and infrastructures. 
+However, our idealized policies entail direct cash transfers to the poorest households. Such transfers are viewed as a promising way to alleviate poverty \citep{haushofer_short-term_2016,egger_general_2022}, but could be challenging to implement. In this regard, progress in payment infrastructures has been encouraging. In particular, the World Bank's \textit{Identification for Development} program finances identification systems in 57 of the world's poorest countries \citep{world_bank_state_2017,world_bank_benin_2020,world_bank_identification_2022}, with the aim of ``providing legal identity for all'' in line with SDG n\textdegree{}16.9. This identification makes it possible to offer numerous services, including cash transfers. In India, the Aadhaar system has provided a unique biometric identifier for 99\% of the adult population in just 8 years. Aadhaar is linked to bank accounts and already used to distribute social benefits \citep{muralidharan_identity_2023}. In less than two weeks, Togo has set up a mobile money transfer for one million people to compensate for the loss of income suffered by informal workers in confined areas during the COVID pandemic \citep{ipa_togos_2021}. Finally, affordable satellite internet and solar panels are making mobile payments accessible in remote areas. % The latter would not even need to rely on future progress regarding identification and mobile networks. 
 
 In a nutshell, whereas poverty alleviation cannot be achieved rapidly without international solidarity, it can be financed by reasonable contributions from the global top 1\%.
 % - One example of global redistribution (incl. largest recipients/contributors)
